[gd_scene format=4 uid="uid://dwmun14snearf"]

[ext_resource type="Script" uid="uid://dsppdww2cn0lt" path="res://scenes/levels/dungeon.gd" id="1_yc5ro"]
[ext_resource type="Texture2D" uid="uid://cpjr8yl2yentc" path="res://graphics/tilesets/soil.png" id="3_w0mg0"]
[ext_resource type="PackedScene" uid="uid://bx7lch3g3s0jw" path="res://scenes/objects/statue.tscn" id="4_pbld3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wyxho"]
texture = ExtResource("3_w0mg0")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/bottom_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/bottom_left_corner = 0
5:0/0/terrains_peering_bit/left_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/left_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/left_side = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/terrains_peering_bit/right_side = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/left_side = 0
9:0/0 = 0
9:0/0/terrain_set = 0
9:0/0/terrain = 0
9:0/0/terrains_peering_bit/right_side = 0
9:0/0/terrains_peering_bit/bottom_side = 0
9:0/0/terrains_peering_bit/bottom_left_corner = 0
9:0/0/terrains_peering_bit/left_side = 0
9:0/0/terrains_peering_bit/top_side = 0
9:0/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/top_side = 0
4:1/0/terrains_peering_bit/top_right_corner = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_left_corner = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0/terrains_peering_bit/top_side = 0
8:1/0/terrains_peering_bit/top_right_corner = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/bottom_right_corner = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_left_corner = 0
9:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/bottom_right_corner = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/bottom_right_corner = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/bottom_left_corner = 0
5:2/0/terrains_peering_bit/left_side = 0
5:2/0/terrains_peering_bit/top_left_corner = 0
5:2/0/terrains_peering_bit/top_side = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_right_corner = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/bottom_left_corner = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/terrains_peering_bit/right_side = 0
8:2/0/terrains_peering_bit/bottom_right_corner = 0
8:2/0/terrains_peering_bit/bottom_side = 0
8:2/0/terrains_peering_bit/bottom_left_corner = 0
8:2/0/terrains_peering_bit/left_side = 0
8:2/0/terrains_peering_bit/top_side = 0
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/terrain = 0
9:2/0/terrains_peering_bit/right_side = 0
9:2/0/terrains_peering_bit/bottom_right_corner = 0
9:2/0/terrains_peering_bit/bottom_side = 0
9:2/0/terrains_peering_bit/left_side = 0
9:2/0/terrains_peering_bit/top_side = 0
10:2/0 = 0
10:2/0/terrain_set = 0
10:2/0/terrain = 0
10:2/0/terrains_peering_bit/right_side = 0
10:2/0/terrains_peering_bit/bottom_side = 0
10:2/0/terrains_peering_bit/bottom_left_corner = 0
10:2/0/terrains_peering_bit/left_side = 0
10:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/right_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_left_corner = 0
5:3/0/terrains_peering_bit/top_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
6:3/0/terrains_peering_bit/top_side = 0
6:3/0/terrains_peering_bit/top_right_corner = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/left_side = 0
7:3/0/terrains_peering_bit/top_side = 0
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 0
8:3/0/terrains_peering_bit/right_side = 0
8:3/0/terrains_peering_bit/left_side = 0
8:3/0/terrains_peering_bit/top_side = 0
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/terrain = 0
9:3/0/terrains_peering_bit/right_side = 0
9:3/0/terrains_peering_bit/bottom_side = 0
9:3/0/terrains_peering_bit/left_side = 0
9:3/0/terrains_peering_bit/top_side = 0
9:3/0/terrains_peering_bit/top_right_corner = 0
10:3/0 = 0
10:3/0/terrain_set = 0
10:3/0/terrain = 0
10:3/0/terrains_peering_bit/right_side = 0
10:3/0/terrains_peering_bit/bottom_side = 0
10:3/0/terrains_peering_bit/left_side = 0
10:3/0/terrains_peering_bit/top_left_corner = 0
10:3/0/terrains_peering_bit/top_side = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/probability = 0.1
0:4/0/terrains_peering_bit/right_side = 0
0:4/0/terrains_peering_bit/bottom_right_corner = 0
0:4/0/terrains_peering_bit/bottom_side = 0
0:4/0/terrains_peering_bit/bottom_left_corner = 0
0:4/0/terrains_peering_bit/left_side = 0
0:4/0/terrains_peering_bit/top_left_corner = 0
0:4/0/terrains_peering_bit/top_side = 0
0:4/0/terrains_peering_bit/top_right_corner = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/probability = 0.1
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/bottom_right_corner = 0
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/bottom_left_corner = 0
1:4/0/terrains_peering_bit/left_side = 0
1:4/0/terrains_peering_bit/top_left_corner = 0
1:4/0/terrains_peering_bit/top_side = 0
1:4/0/terrains_peering_bit/top_right_corner = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/probability = 0.1
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/bottom_right_corner = 0
2:4/0/terrains_peering_bit/bottom_side = 0
2:4/0/terrains_peering_bit/bottom_left_corner = 0
2:4/0/terrains_peering_bit/left_side = 0
2:4/0/terrains_peering_bit/top_left_corner = 0
2:4/0/terrains_peering_bit/top_side = 0
2:4/0/terrains_peering_bit/top_right_corner = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/probability = 0.1
3:4/0/terrains_peering_bit/right_side = 0
3:4/0/terrains_peering_bit/bottom_right_corner = 0
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/bottom_left_corner = 0
3:4/0/terrains_peering_bit/left_side = 0
3:4/0/terrains_peering_bit/top_left_corner = 0
3:4/0/terrains_peering_bit/top_side = 0
3:4/0/terrains_peering_bit/top_right_corner = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/top_side = 0
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/terrain = 0
5:4/0/terrains_peering_bit/right_side = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/left_side = 0
5:4/0/terrains_peering_bit/top_side = 0
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/terrain = 0
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/left_side = 0
6:4/0/terrains_peering_bit/top_side = 0
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/terrain = 0
7:4/0/terrains_peering_bit/bottom_side = 0
7:4/0/terrains_peering_bit/left_side = 0
7:4/0/terrains_peering_bit/top_side = 0
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 0
8:4/0/terrains_peering_bit/right_side = 0
8:4/0/terrains_peering_bit/bottom_side = 0
8:4/0/terrains_peering_bit/left_side = 0
8:4/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_q0ye3"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Soil"
terrain_set_0/terrain_0/color = Color(0.62798536, 0.17769939, 0.46800947, 1)
sources/0 = SubResource("TileSetAtlasSource_wyxho")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc5ro"]
size = Vector2(63, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7f72c"]
size = Vector2(30, 17)

[node name="Dungeon" type="Node2D" unique_id=1707457319]
script = ExtResource("1_yc5ro")

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1002034719]

[node name="SoilLayer" type="TileMapLayer" parent="." unique_id=1912891517]
modulate = Color(0.41551143, 0.25766784, 0, 1)
z_index = -2
tile_map_data = PackedByteArray("AAASABoAAAABAAEAAAATABoAAAABAAEAAAAUABoAAAABAAQAAAAVABoAAAACAAQAAAAWABoAAAABAAEAAAAXABoAAAABAAEAAAAXABkAAAABAAQAAAAWABkAAAAAAAQAAAAVABkAAAABAAEAAAAUABkAAAABAAEAAAAXAB4AAAAAAAQAAAAXAB0AAAABAAEAAAAXABwAAAAAAAQAAAAXABsAAAABAAEAAAAWACEAAAABAAEAAAAWACAAAAABAAEAAAAWAB8AAAABAAEAAAAWAB4AAAABAAEAAAAWAB0AAAABAAEAAAAWABwAAAABAAEAAAAWABsAAAABAAEAAAAVACEAAAADAAQAAAAVACAAAAABAAEAAAAVAB8AAAACAAQAAAAVAB4AAAABAAEAAAAVAB0AAAABAAEAAAAVABwAAAABAAQAAAAVABsAAAABAAEAAAAUACEAAAABAAEAAAAUACAAAAABAAEAAAAUAB8AAAABAAEAAAAUAB4AAAABAAEAAAAUAB0AAAABAAEAAAAUABwAAAABAAEAAAAUABsAAAABAAEAAAATACEAAAABAAEAAAATACAAAAADAAQAAAATAB8AAAABAAEAAAATAB4AAAABAAEAAAATAB0AAAABAAEAAAATABwAAAABAAEAAAATABsAAAABAAEAAAASACEAAAABAAEAAAASACAAAAABAAEAAAASAB8AAAABAAEAAAASAB4AAAABAAEAAAASAB0AAAABAAEAAAASABwAAAADAAQAAAASABsAAAADAAQAAAARACEAAAABAAEAAAARACAAAAABAAEAAAARAB8AAAABAAEAAAARAB4AAAABAAEAAAARAB0AAAABAAEAAAARABwAAAABAAEAAAARABsAAAAAAAQAAAAQACAAAAABAAEAAAAQAB8AAAABAAEAAAAQAB4AAAABAAEAAAAQAB0AAAAAAAQAAAAQABwAAAABAAEAAAAQABkAAAABAAEAAAAQABoAAAAAAAQAAAARABkAAAACAAQAAAASABkAAAABAAEAAAARABoAAAABAAEAAAATABkAAAABAAEAAAAQABsAAAADAAQAAAAQACEAAAAGAAEAAAAPACEAAAAAAAIAAAAPACAAAAAGAAEAAAAOACAAAAAAAAIAAAAPAB8AAAABAAEAAAAOAB8AAAAGAAEAAAAOAB4AAAAAAAQAAAAPAB4AAAABAAEAAAAOAB0AAAADAAQAAAANAB0AAAADAAQAAAANABwAAAABAAEAAAANAB4AAAAGAAEAAAANAB8AAAAAAAIAAAANABsAAAAGAAIAAAANABoAAAAAAAEAAAAOABoAAAABAAEAAAAOABsAAAABAAEAAAAOABwAAAABAAEAAAAPABsAAAADAAQAAAAPABkAAAABAAEAAAAOABkAAAAGAAIAAAAOABgAAAAAAAAAAAAPABgAAAAGAAIAAAAQABgAAAABAAEAAAARABgAAAABAAEAAAASABgAAAABAAQAAAATABcAAAABAAEAAAAUABcAAAABAAEAAAAVABcAAAABAAQAAAAVABgAAAABAAEAAAAUABgAAAABAAEAAAATABgAAAABAAQAAAAWABgAAAABAAEAAAAXABgAAAABAAQAAAAWABcAAAADAAQAAAAYABoAAAADAAQAAAAYABsAAAABAAEAAAAYABkAAAABAAEAAAAZABoAAAABAAEAAAAZABsAAAABAAEAAAAZABwAAAABAAEAAAAZAB0AAAAAAAQAAAAaAB0AAAABAAEAAAAYABwAAAABAAEAAAAZAB4AAAABAAEAAAAYAB4AAAAAAAQAAAAYAB8AAAADAAQAAAAXAB8AAAABAAEAAAAXACAAAAABAAQAAAAYAB0AAAABAAEAAAAYACAAAAAFAAEAAAAXACEAAAAFAAEAAAAPAB0AAAADAAQAAAAPABwAAAABAAEAAAAPABoAAAABAAEAAAANABkAAAAAAAAAAAAQABcAAAAGAAIAAAAMABsAAAAAAAAAAAAMABwAAAAAAAEAAAAMAB0AAAAAAAEAAAAMAB4AAAAAAAIAAAARABcAAAABAAEAAAASABcAAAAAAAQAAAASABYAAAABAAEAAAAPABcAAAAAAAAAAAAQABYAAAAAAAAAAAARABYAAAAGAAIAAAATABYAAAACAAQAAAAUABYAAAABAAEAAAAVABYAAAABAAEAAAARABUAAAAAAAAAAAASABUAAAAGAAIAAAASABQAAAAAAAAAAAATABQAAAABAAAAAAATABUAAAABAAEAAAAUABQAAAABAAAAAAAUABUAAAABAAEAAAAVABUAAAAFAAIAAAAVABQAAAACAAAAAAAWABYAAAAFAAIAAAAXABYAAAACAAAAAAAXABcAAAAFAAIAAAAYABgAAAAFAAIAAAAZABkAAAAFAAIAAAAaABwAAAABAAEAAAAaABsAAAAFAAIAAAAQACIAAAAAAAIAAAARACIAAAAGAAEAAAASACIAAAACAAQAAAATACIAAAABAAQAAAAUACIAAAABAAEAAAAVACIAAAABAAEAAAAWACIAAAAFAAEAAAARACMAAAAAAAIAAAASACMAAAAGAAEAAAATACMAAAABAAEAAAAUACMAAAABAAQAAAAVACMAAAAFAAEAAAASACQAAAAAAAIAAAATACQAAAAGAAEAAAAUACQAAAAFAAEAAAAVACQAAAACAAIAAAATACUAAAAAAAIAAAAUACUAAAACAAIAAAAWACMAAAACAAIAAAAXACIAAAACAAIAAAAYACEAAAACAAIAAAAZACAAAAACAAIAAAAZAB8AAAAFAAEAAAAaAB8AAAACAAIAAAAaAB4AAAAFAAEAAAAbAB4AAAACAAIAAAAbAB0AAAACAAEAAAAbABwAAAACAAEAAAAaABoAAAACAAEAAAAWABUAAAACAAAAAAAYABcAAAACAAAAAAAZABgAAAACAAAAAAAaABkAAAACAAAAAAAbABsAAAACAAAAAAA=")
tile_set = SubResource("TileSet_q0ye3")
navigation_visibility_mode = 1

[node name="Statue" parent="." unique_id=517209246 instance=ExtResource("4_pbld3")]
y_sort_enabled = true
position = Vector2(315, 309)

[node name="EnteredArea2D" type="Area2D" parent="." unique_id=804755178]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnteredArea2D" unique_id=537451296]
position = Vector2(319.5, 573.5)
shape = SubResource("RectangleShape2D_yc5ro")

[node name="ExitArea2D" type="Area2D" parent="." unique_id=2094493426]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea2D" unique_id=1505291044]
position = Vector2(320, 600.5)
shape = SubResource("RectangleShape2D_7f72c")

[connection signal="approach_statue" from="Statue" to="." method="_on_statue_approach_statue"]
[connection signal="body_entered" from="EnteredArea2D" to="." method="_on_entered_area_2d_body_entered"]
[connection signal="body_entered" from="ExitArea2D" to="." method="_on_exit_area_2d_body_entered"]
